# gda-command-v2

./: .dockerignore  .env.production.example  .gitignore  CLAUDE.md  Dockerfile.v3  FINANCIALS_BUILD_RESULT.md  GDA_Command_Platform_Assessment.xlsx  GDA_Command_Platform_Assessment_131.xlsx  GDA_Command_Platform_Assessment_S133.xlsx  GDA_Command_Platform_Assessment_S135.xlsx  GDA_Command_Platform_Assessment_S144.xlsx  GDA_Command_Platform_Assessment_S145.xlsx  GDA_Command_Platform_Assessment_S146.xlsx  GDA_Command_Platform_Assessment_S153.xlsx  GDA_Command_Platform_Assessment_S154.xlsx  GDA_Command_Platform_Assessment_S155.xlsx  GDA_Command_Upgrade_Log_S155.docx  GDA_Completion_Roadmap.docx  GDA_Master_Build_v42.xlsx  GDA_Master_Build_v43.xlsx  GDA_Master_Build_v48.xlsx  GDA_Master_Build_v62.xlsx  GDA_S153_DevOps_Consolidation_Report.docx  GDA_S153_S154_DevOps_Consolidation_Report_2.docx  GDA_S155_DevOps_Consolidation_Report_3.docx  Master_Build_v32.xlsx  Master_Build_v34.xlsx  Master_Build_v35.xlsx  Master_Build_v36.xlsx  Master_Build_v37.xlsx  Master_Build_v38.xlsx  Master_Build_v39.xlsx  Master_Build_v40.xlsx  Master_Build_v41.xlsx  PER_S-008-DELIVERY-NOTES.txt  README.md  The One and Only Master Build.xlsx  The_One_and_Only_Master_Build_v 2.0.xlsx  The_One_and_Only_Master_Build_v_2.2.xlsx  The_One_and_Only_Master_Build_v_25.xlsx  (+18 more)
apps/gda-agent-v3/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/gda-agent-v3/src/: agent.py  config.py  db.py  main.py  retry.py
apps/gda-agent-v3/tests/: conftest.py  (+4 more)
(+1430 files in other folders)
