[project]
name = "gda-agent-v3"
version = "1.0.0"
description = "GDA Command V3 Agent Runtime"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["src/db.py", "src/agent.py"]
reportArgumentType = "warning"
reportAttributeAccessIssue = "warning"
